# notebooks

./: .gitignore  CNAME  README.md  compare.sql  data_model.html  dependencies.sh  economy.html  economy.ipynb  electricity_prices.html  example-unemployment.ipynb  example.py  experiment.py  exploratory_queries.ipynb  exploring_ssz_graph.ipynb  index.html  main.md  main.py  parliament_commissions.html  parliament_members.html  parser.py  population.html  pyproject.toml  queries.py  real_estate.html  real_estate.ipynb  requirements.txt  run.sh
.github/workflows/: ci.yaml  tests.yaml
html/: Developers | Zazuko.html  README.md  data_model.html  index.html  package-lock.json  package.json
html/styles/: about.scss  contact-layout.scss  general.scss  home-group-block.scss  home-layout.scss  main.scss  md-content.scss  services.scss  style.css  style.css.map  topbar.scss
html/zazuko/: index.html.j2
notebooks/: data_model.ipynb  economy.ipynb  electricity_prices.ipynb  real_estate.ipynb
notebooks/animal-disease/: data.csv  epidemics.ipynb  epidemics_old.ipynb  example.ipynb
notebooks/animal_disease/: epidemics.ipynb
notebooks/electricity-prices/: electricity_prices.ipynb
notebooks/electricity_prices/: electricity_prices.ipynb  electricity_prices_full.ipynb
notebooks/environment/: heavy_metals.ipynb  ideas.md
notebooks/politics/: parliament_comissions.ipynb  parliament_commissions.ipynb  parliament_members.ipynb
notebooks/statistics-zurich/: data_model.ipynb  economy.ipynb  real_estate.ipynb
notebooks/statistics-zurich/zazuko/: conf.json  index.html.j2
notebooks/statistics_zurich/: README.md  data_model.ipynb  economy.ipynb  population.ipynb  real_estate.ipynb
notebooks/swisstopo/: StreetsApp.py  client.py  main.py  streets.ipynb  utils.py
notebooks/zefix/: addresses.json  zefix.ipynb
tests/: parser.py  queries.json  test_queries.py
zazuko/: index.html.j2
zazuko/static/: style.css  zazuko.css
