[tool.poetry]
name = "sparql-notebooks"
version = "0.1.0"
description = "Notebooks using linked data"
authors = ["Magdalena Surówka"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.3.4"
sparqlkernel ="^1.3.0"
matplotlib = "^3.4.2"
mapclassify = "^2.4.2"
pandas = "^1.2.4"
graphly = {git = "https://github.com/zazuko/graphly.git", rev = "main"}
folium = "^0.12.1"
plotly = "^5.1.0"
geopy = "^2.2.0"
networkx = "^2.6.2"
bokeh = "^2.3.3"
streamlit = "^1.10.0"
streamlit-folium = "^0.6.14"
dash = "^2.5.1"
dash-bootstrap-components = "^1.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
jupyter-contrib-nbextensions = "^0.5.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
